fixed image header on mobile and dark mode

--- a/src/components/ImageHeader.css
+++ b/src/components/ImageHeader.css
@@ -1,5 +1,10 @@
-#header {
+#lightHeader {
     font-size: 5rem;
+}
+
+#darkHeader {
+    font-size: 5rem;
+    color: white;
 }
 
 #container {
@@ -10,7 +15,17 @@
 }
 
 @media only screen and (max-width: 450px) {
-    #header {
-        font-size: 2.5rem;
+    #lightHeader {
+        font-size: 3.1rem;
+    }
+
+    #darkHeader {
+        font-size: 3.1rem;
+        color: white;
+    }
+
+    #container {
+        display: flex;
+        flex-direction: column;
     }
 }
